Calculadora: Juan Quemada y Juan Pedro Gonźalez Soler

--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,7 @@ function square() {
 </script>
 </head>
 <body>
+<h1>Proyecto realizado por Juan Quemada Vives (jquemada) y Juan Pedro González Soler (jpglezsoler)</h1>
   Number:
   <input type="text" id="n1"><p>
 
